--- a/mockups/sass/mobile.scss
+++ b/mockups/sass/mobile.scss
@@ -91,7 +91,7 @@ body{
 
 #navigation_mobile{
 	background-color: #FFF;
-	border-top: 1px solid #F0F0F0;
+	border-top: 1px solid #D8D8D8;
 	position: fixed;
 	bottom: 0px;
 	width: 100%;
@@ -121,6 +121,7 @@ body{
 	#avisos{
 		position: absolute;
 		display: block;
+		cursor: pointer;
 		width: 7px;
 		margin-top: 0px;
 		z-index: 30;
@@ -138,10 +139,28 @@ body{
 }
 
 #tool{
-	padding: 96px 16px 16px 16px;
-	p{
-		padding: 0 0 16px 0;
-		font-size: 14px;
+	padding: 76px 0;
+	header{
+		background-color: darken(#43a7c8, 10%);
+		color: #F0F0F0;
+		padding: 8px 16px;
+		font-family: "Raleway", sans-serif;
+		font-size: 1.4em;
+		.toolbar{
+			float: right;
+			i{
+				color: #F0F0F0;
+			    display: inline-block;
+			    margin: 0 8px 0 0;
+			}
+		}
+	}
+	.content{
+		padding: 16px;
+		p{
+			padding: 0 0 16px 0;
+			font-size: 14px;
+		}
 	}
 }
 
@@ -202,8 +221,48 @@ body{
 	    white-space: nowrap;
 	}
 }
+
 h1{
 	font-family: "Raleway", sans-serif;
-	font-size: 1.5em;
+	font-size: 1.2em;
 	padding: 0 0 12px 0;
+}
+
+#overlay_notify{
+	background-color: rgba(0,0,0,0.25);
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+	text-align: center;
+	display: none;
+	.popup{
+		background-color: #F9F9F9;
+		text-align: left;
+		width: 75%;
+		margin: 96px auto;
+		@include border-radius( 5px );
+		@include box-shadow(0 0 5px rgba(0,0,0,0.25) );
+		h2{
+			padding: 16px 16px;
+			font-family: "Raleway", sans-serif;
+			font-size: 1.2em;
+			color: #43a7c8;
+			border-bottom: 1px solid #D8D8D8;
+		}
+		ul{
+			padding: 0 0 16px 0;
+			li{
+				padding: 8px 16px;
+				border-bottom: 1px solid #D8D8D8;
+				line-height: 1.25;
+				font-size: 14px;
+				strong{
+					font-weight: 700;
+				}
+			}
+		}
+	}
 }
