--- a/mockups/sass/mobile.scss
+++ b/mockups/sass/mobile.scss
@@ -136,6 +136,22 @@ body{
 			margin-top: -34px;
 		}
 	}
+	#chat{
+		background-color: #43a7c8;
+		color: #F9F9F9;
+		position: absolute;
+		font-size: 18px;
+		bottom: 48px;
+		right: 16px;
+		padding: 17px 13px;
+		text-align: center;
+		@include border-radius( 45px );
+		@include transition(bottom, 0.25s linear);
+		@include box-shadow(0px 2px 5px rgba(0,0,0,0.5));
+		&.showing{
+			bottom: 16px;
+		}
+	}
 }
 
 #tool{
@@ -160,6 +176,7 @@ body{
 		p{
 			padding: 0 0 16px 0;
 			font-size: 14px;
+			line-height: 1.45;
 		}
 	}
 }
