--- a/mockups/sass/button.scss
+++ b/mockups/sass/button.scss
@@ -81,27 +81,29 @@ p{
 	button{
 		color: #FFF;
 		cursor: pointer;
-		border-top: 1px solid #09C;
-		border-left: 1px solid #09C;
-		border-right: 1px solid #09C;
-		border-bottom: 1px solid rgba(#0da5e5, 0.8);
+		border-top: 1px solid #4a8db3;
+		border-left: 1px solid #4a8db3;
+		border-right: 1px solid #4a8db3;
+		border-bottom: 1px solid rgba( lighten( #5299c2, 10% ) , 0.6);
 		font-family: "Noto Sans", Arial, sans-serif;
 		letter-spacing: 0.8px;
 		margin: 0 0.8em 0 0;
 		padding: 0.5em 1.2em 0.65em 1.2em;
+		position: relative;
 		@include appearance(none);
 		@include background-image( linear-gradient( #60b3e3, #5299c2 ) );
-		@include box-shadow( 0 3px 0px #09C );
+		@include box-shadow( 0 3px 0px #4a8db3 );
 		@include border-radius(3px);
+		@include text-shadow( 0px 1px 3px rgba(0,0,0,0.35) );
 		&:hover{
 			background: #60b3e3;
 		}
 		&:active{
-			border-bottom: 4px solid #09C;
+			border-bottom: 4px solid #60b3e3;
 			outline: 0;
 			padding: 0.5em 1.2em 0.65em 1.2em;
 			@include background-image( linear-gradient( #5299c2, #60b3e3 ) );
-			@include box-shadow( inset 0 3px 3px #09C );
+			@include box-shadow( inset 0 3px 3px #4a8db3 );
 		}
 		&[disabled="disabled"]{
 			background: #60b3e3;
