--- a/mockups/sass/button.scss
+++ b/mockups/sass/button.scss
@@ -15,22 +15,98 @@ body{
 }
 
 .container{
-	position: absolute;
-	width: 500px;
-	height: 500px;
-	top: 200px;
-	left: 200px;
 	background: #FFF;
-	padding: 1em;
 	border: 1px solid #E0E0E0;
+	margin: 3em auto;
+	padding: 1em;
+	width: 500px;
 }
 
 p{
 	margin: 24px 0 12px 0;
 }
 
+input[type="checkbox"], input[type="radio"]{
+	background-color: #FFF;
+	border: 1px solid #C0C0C0;
+	display: inline-block;
+	height: 16px;
+	width: 16px;
+	vertical-align: sub;
+	@include appearance(none);
+	&:checked{
+		border: 1px solid #60b3e3;
+	}
+}
+input[type="checkbox"]{
+	@include border-radius(3px);
+	&:checked{
+		background-image: inline-image("check.png");
+		background-size: 16px;
+	}
+}
+input[type="radio"]{
+	@include border-radius(24px);
+	&:checked{
+		@include background-image(radial-gradient(#60b3e3, #FFF 5px));
+	}
+}
+
+.button{
+	color: #777;
+	cursor: pointer;
+	border-top: 1px solid #C0C0C0;
+	border-left: 1px solid #C0C0C0;
+	border-right: 1px solid #C0C0C0;
+	border-bottom: 1px solid rgba(#FFF, 0.9);
+	//border-bottom: 1px solid #C0C0C0;
+	display: inline-block;
+	font-family: "Noto Sans", Arial, sans-serif;
+	font-size: 13px;
+	letter-spacing: 0.8px;
+	margin: 0 0.8em 0 0;
+	padding: 0.5em 1.2em 0.4em 1.2em;
+	@include appearance(none);
+	@include background-image( linear-gradient( #FFF, #F0F0F0 ) );
+	@include box-shadow( 0 3px 0px #C0C0C0 );
+	@include border-radius(3px);
+	&:hover{
+		background: #F0F0F0;
+	}
+	&:active{
+		border-bottom: 4px solid #FFF;
+		outline: 0;
+		@include background-image( linear-gradient( #F0F0F0, #FFF ) );
+		@include box-shadow( inset 0 3px 3px #C0C0C0 );
+	}
+	&[disabled="disabled"]{
+		background: #F0F0F0;
+		color: #CCC;
+		cursor: not-allowed;
+		opacity: 0.7;
+	}
+}
+
 .navIntraTool{
 	margin: 1em 0;
+	select{
+		background-color: #FFF;
+		background-image: inline-image("icon-arrow-down.png");
+		background-position: right 50%;
+		background-repeat: no-repeat;
+		border-top: 1px solid #C0C0C0;
+		border-left: 1px solid #C0C0C0;
+		border-right: 1px solid #C0C0C0;
+		border-bottom: 1px solid rgba(#FFF, 0.9);
+		//border-bottom: 1px solid #C0C0C0;
+		font-family: "Noto Sans", Arial, sans-serif;
+		max-width: 15em;
+		padding: 0.5em 2em 0.4em 0.5em;
+		text-align: center;
+		@include appearance(none);
+		@include border-radius(3px);
+		@include box-shadow( 0 3px 0px #C0C0C0 );
+	}
 	button{
 		color: #777;
 		cursor: pointer;
@@ -38,6 +114,7 @@ p{
 		border-left: 1px solid #C0C0C0;
 		border-right: 1px solid #C0C0C0;
 		border-bottom: 1px solid rgba(#FFF, 0.9);
+		//border-bottom: 1px solid #C0C0C0;
 		font-family: "Noto Sans", Arial, sans-serif;
 		letter-spacing: 0.8px;
 		margin: 0 0.8em 0 0;
@@ -126,4 +203,9 @@ p{
 			}
 		}
 	}
+}
+
+a{
+	@extend .button;
+	text-decoration: none;
 }
